[package]
name = "moors"
version = "0.2.5"
edition = "2024"
authors = ["Andrés Sandoval Abarca <andres.sndbrca@gmail.com>"]
description = "Solving multi-objective optimization problems using genetic algorithms."
license = "MIT"
repository = "https://github.com/andresliszt/moo-rs"

[lib]
name = "moors"
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.9.0"
rand_distr = "0.5.1"
num-traits = "0.2.19"
ndarray = "0.16.1"
ordered-float = "5.0.0"
ndarray-stats = "0.6.0"
faer-ext = { version = "0.5.0", features = ["ndarray"] }
faer = "0.21.9"
thiserror = "2.0.12"
derive_builder = "0.20.2"
paste = "1.0.15"

[dev-dependencies]
criterion = "0.5.1"
rstest = "0.25.0"
codspeed-criterion-compat = "2"

[[bench]]
name = "fds"
path = "benches/fds.rs"
harness = false

[[bench]]
name = "dtlz2"
path = "benches/dtlz2.rs"
harness = false

[[bench]]
name = "zdt1"
path = "benches/zdt1.rs"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[profile.dev]
incremental = true

[profile.test]
incremental = true
