[package]
name = "moors_macros"
edition = "2024"
authors = ["Andrés Sandoval Abarca <andres.sndbrca@gmail.com>"]
description = "Procedural macros for moors project"
license = "MIT"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.38"
proc-macro2 = "1.0.94"
syn = { version = "2", features = ["full", "extra-traits"] }
