[package]
name = "pymoors_macros"
edition = "2024"
authors = ["Andrés Sandoval Abarca <andres.sndbrca@gmail.com>"]
description = "Procedural macros for pymoors project"
repository = "https://github.com/andresliszt/moo-rs"
license = "MIT"
version = "0.1.3"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.38"
syn = "2.0.0"
proc-macro2 = "1.0.94"
